# cognitive-ledger

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONVENTIONS.md  DEVLOG.md  FIRSTRUN.md  QUICK_REF.md  README.md  config.sample.yaml  config.yaml  config.yaml.example  pyproject.toml  schema.yaml
.doc/: TODO.md  ab_improvement_ideas.md  ab_testing.md  refactoring_1.md  refactoring_2.md
.plans/: 14-batteries-included-setup.md  15-fix-ledger-notes-dir-bypass.md  17-fix-tui-query-codex-dependency.md  18-fix-tui-note-writer-toctou.md  TODO.md  path-naming-refactor.md
ledger/: __init__.py  ab.py  ab_probe.py  briefing.py  browse.py  config.py  context.py  errors.py  eval.py  inbox.py  ingest.py  init.py  layout.py  maintenance.py  query.py  retrieval.py  retrieval_types.py  semantic.py  signals.py  timeline.py  validation.py  venv.py  voice.py
scripts/: build_context.py  build_context_profiles.py  ledger  ledger_ab  ledger_embeddings.py  setup-venv.sh  sheep  sheep-auto.sh
skills/: install-skill.sh
templates/: generic_note_template.md  inbox_template.md  ingest_prompt_template.md  open_loop_template.md  voice_dna_template.md
tests/: conftest.py  test_activity_type.py  test_browse.py  test_config.py  test_context.py  test_context_profiles.py  test_cost_hints.py  test_errors.py  test_eval_helpers.py  test_init.py  test_io.py  test_ledger.py  test_ledger_ab.py  test_ledger_embeddings.py  test_maintenance.py  test_notes.py  test_obsidian_cli.py  test_obsidian_daemon.py  test_obsidian_doctor.py  test_obsidian_dropin.py  test_obsidian_exports.py  test_obsidian_extraction.py  test_obsidian_queue.py  test_parsing.py  test_path_naming_refactor.py  test_privacy.py  test_qa_hardening.py  test_query.py  (+10 more)
tui/: __init__.py  __main__.py  app.py  build-tui.sh  pyproject.toml
tui/models/: __init__.py  enums.py  note.py
tui/screens/: __init__.py  main_screen.py  quick_fix.py  tag_editor.py
tui/services/: __init__.py  note_parser.py  note_store.py  note_writer.py  sheep_runner.py
tui/widgets/: __init__.py  graph_panel.py  lint_panel.py  note_tree.py
(+92 files in other folders)
