[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cognitive-ledger"
version = "0.2.0"
description = "File-based memory system for AI agents"
requires-python = ">=3.11"
dependencies = [
    "textual>=0.89.0",
    "pyyaml>=6.0",
    "numpy",
    "scikit-learn",
    "rank-bm25",
    "watchdog>=4.0.0",
]

[project.scripts]
ledger-obsidian = "ledger.obsidian.cli:main"

[project.optional-dependencies]
dev = ["pyinstaller", "pytest>=8.0"]
embeddings = [
    "numpy<2",
    "transformers<5",
    "sentence-transformers==2.7.0",
]

[tool.hatch.build.targets.wheel]
packages = ["ledger"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
