[project]
name = "cognitive-ledger-tui"
version = "0.1.0"
description = "A browsing-focused TUI for the Cognitive Ledger"
requires-python = ">=3.11"
dependencies = [
    "textual>=0.89.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
ledger-tui = "tui.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
